fix wrapping on fee box, and some data errors

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,8 +13,10 @@ p a:hover { text-decoration: underline; }
 input.search, input.agency { width: 100% }
 textarea.request { height: 9em; }
 textarea.fee-waiver-justification  { height: 4em; }
-input.upto { /*width: 80px; */}
+.pure-form input.upto[type=text] { width: 80px; display: inline;}
 span.fee-amount { font-weight: bold; }
+
+label.fee-waiver {display: inline;}
 
 .pure-menu a {border-bottom: 0.3em solid #fff;}
 .pure-menu .pure-menu-selected a { border-bottom: 0.3em solid #333;}
